plugins {
    id 'java'
    id 'application'
}

group = 'com.coolspy3'

mainClassName = 'com.coolspy3.csmodloader.Main'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    jcenter()
}

run {
    enableAssertions = true
}

// repositories {
//     maven {
//         url 'https://jitpack.io'
//     }
// }

dependencies {
    implementation 'com.google.code.gson:gson:2.8.8'
    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
    // implementation "com.github.KevinPriv:MojangAPI:1.0"
    testImplementation     'junit:junit:4.13'
}

run.dependsOn('build')

jar {
    manifest {
        attributes 'Main-Class': 'com.coolspy3.csmodloader.Main'
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
